--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "tsc --w"
     },
     "author": "",
     "license": "ISC",
@@ -12,6 +13,7 @@
         "browser-sync": "^2.26.7",
         "gulp": "^4.0.2",
         "gulp-sass": "^4.1.0",
-        "node-sass": "^4.14.1"
+        "node-sass": "^4.14.1",
+        "typescript": "^3.9.7"
     }
 }
