--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gulp": "^4.0.2",
         "gulp-sass": "^4.1.0",
         "node-sass": "^4.14.1",
+        "systemjs": "^6.4.0",
         "typescript": "^3.9.7"
     }
 }
